test/e2e/owner-references/01-assert-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-owner-refs
  ownerReferences:
    - apiVersion: memcached.c5c3.io/v1alpha1
      kind: Memcached
      name: test-owner-refs
      controller: true
      blockOwnerDeletion: true
spec:
  replicas: 2
status:
  readyReplicas: 2
