test/e2e/owner-references/01-assert-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-owner-refs
  ownerReferences:
    - apiVersion: memcached.c5c3.io/v1alpha1
      kind: Memcached
      name: test-owner-refs
      controller: true
      blockOwnerDeletion: true
spec:
  clusterIP: None
  ports:
    - port: 11211
